Fixed LoginForm z-index

--- a/src/preact-components/LoginForm.module.sass
+++ b/src/preact-components/LoginForm.module.sass
@@ -12,6 +12,7 @@
 	display: flex
 	justify-content: center
 	align-items: center
+	z-index: 999
 	.container__box
 		width: 37em
 		background: #F5FDFC
